# aith_backend

./: .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile
src/: contracts.py  main.py  schemas.py
tests/: test_homework_2.py
