[tool.poetry]
name = "aith-backend"
version = "0.1.0"
description = ""
authors = ["Andrey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^30.0.0"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
responses = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
