[tool.poetry]
name = "aith-backend"
version = "0.1.0"
description = ""
authors = ["Andrey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
requests = "^2.32.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
